--- a/notebooks/Article_summarizer.ipynb
+++ b/notebooks/Article_summarizer.ipynb
@@ -23,7 +23,7 @@
     "# pmcid = \"PMC10190252\"\n",
     "# pmcid = \"PMC10463275\"\n",
     "pmcid = \"PMC8402658\"\n",
-    "# pmcid = \"PMC840265\" # this example is a test for an invalid PMD ID\n",
+    "# pmcid = \"PMC840265\" # this example is a test for an invalid PMC ID\n",
     "# pmcid = \"PMC8854333\"\n",
     "# pmcid = \"PMC9386735\"\n",
     "# pmcid = \"PMC9725778\"\n",
@@ -328,8 +328,8 @@
       "}\n",
       "}\n",
       "\n",
-      "CPU times: user 25.8 ms, sys: 3.9 ms, total: 29.7 ms\n",
-      "Wall time: 48.2 s\n"
+      "CPU times: user 29.1 ms, sys: 4.56 ms, total: 33.7 ms\n",
+      "Wall time: 47.8 s\n"
      ]
     }
    ],
@@ -338,6 +338,14 @@
     "response = utils.prompt_gpt(client, MODEL, text, system_message, assistant_message)\n",
     "print(response)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34665e0a-8e49-4d14-847f-940694bb11c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
