--- a/notebooks/Article_summarizer.ipynb
+++ b/notebooks/Article_summarizer.ipynb
@@ -98,7 +98,7 @@
     "}\n",
     "\"Study Type\": {\n",
     "  \"Diagnostic Method Development\": yes or no,\n",
-    "  \"Wastewater Surveilance\": yes or no,\n",
+    "  \"Wastewater Surveillance\": yes or no,\n",
     "  \"COVID or SARS-CoV-2 related\": yes or no\n",
     "  \"other\":<specify other types of study as text>\n",
     "}\n",
