--- a/notebooks/Article_summarizer.ipynb
+++ b/notebooks/Article_summarizer.ipynb
@@ -40,8 +40,7 @@
    "id": "c2ae841c-4fc9-4161-bd35-6efc2e14e326",
    "metadata": {},
    "source": [
-    "## Prompts to extract summarize the RADx-rad articles\n",
-    "Modify to your specific needs."
+    "## Prompts to summarize RADx-rad articles"
    ]
   },
   {
@@ -70,37 +69,37 @@
     "\"Title\":<title>,\n",
     "\"Objective and Scope\": {\n",
     "  \"Objective\":<text>,\n",
-    "  \"Scope\":<text>\n",
+    "  \"Scope\":<text>,\n",
     "},\n",
     "\"Methodology\": {\n",
     "  \"Design\":<text>,\n",
     "  \"Testing\":<text>,\n",
-    "  \"Validation\":<text>\n",
+    "  \"Validation\":<text>,\n",
     "  <other sub-criteria as needed>:<text>\n",
     "},\n",
     "\"Key Findings\": {\n",
     "  \"Sensitivity\":<text>,\n",
     "  \"Specificity\":<text>,\n",
-    "  \"Limit of Detection (LOD)\":<text>\n",
-    "  \"Variant detection\":<text>\n",
-    "  \"Cross-reactivity with other viruses\":<text>\n",
-    "   <other sub-criteria as needed>:<text>\n",
+    "  \"Limit of Detection (LOD)\":<text>,\n",
+    "  \"Variant detection\":<text>,\n",
+    "  \"Cross-reactivity with other viruses\":<text>,\n",
+    "   <other sub-criteria as needed>:<text>,\n",
     "},\n",
     "\"Limitations\": {\n",
-    "  \"Testing\": <text>,\n",
-    "  \"Environmental Factors\":<text>\n",
-    "   <other sub-criteria as needed>:<text>\n",
+    "  \"Testing\":<text>,\n",
+    "  \"Environmental Factors\":<text>,\n",
+    "   <other sub-criteria as needed>:<text>,\n",
     "},\n",
     "\"Potential Applications\": {\n",
     "  \"Point-of-Care Testing\":<text>,\n",
-    "  \"Non-Invasive Diagnostics\":<text>\"\n",
-    "   <other sub-criteria as needed>:<text>\n",
+    "  \"Non-Invasive Diagnostics\":<text>,\n",
+    "   <other sub-criteria as needed>:<text>,\n",
     "}\n",
     "\"Study Type\": {\n",
-    "  \"Diagnostic Method Development\": yes or no,\n",
-    "  \"Wastewater Surveillance\": yes or no,\n",
-    "  \"COVID or SARS-CoV-2 related\": yes or no\n",
-    "  \"other\":<specify other types of study as text>\n",
+    "  \"Diagnostic Method Development\":<yes or no>,\n",
+    "  \"Wastewater Surveillance\":<yes or no>,\n",
+    "  \"COVID or SARS-CoV-2 related\":<yes or no>,\n",
+    "  \"other\":<text>,\n",
     "}\n",
     "}\n",
     "\"\"\""
@@ -304,7 +303,7 @@
       "},\n",
       "\"Biorecognition Elements\": {\n",
       "  \"Target\": \"SARS-CoV-2 spike gene\",\n",
-      "  \"Primers\": \"Loci-speciﬁc primers were used to target 3 regions of the spike gene: N-terminal domain (NTD), receptor binding domain (RBD), and the region of the S1 and S2 subunit split (S1S2)\"\n",
+      "  \"Primers\": \"Loci-specific primers were used to target 3 regions of the spike gene: N-terminal domain (NTD), receptor binding domain (RBD), and the region of the S1 and S2 subunit split (S1S2)\"\n",
       "},\n",
       "\"Key Findings\": {\n",
       "  \"Sensitivity\": \"The method was able to detect SARS-CoV-2 variants in wastewater with high sensitivity\",\n",
@@ -313,23 +312,23 @@
       "  \"Variant detection\": \"The method was able to detect the emergence of two variants of concern, B.1.1.7 (Alpha) and P.1 (Gamma), and their displacement of the D614G B.1 variant in a Missouri sewershed\"\n",
       "},\n",
       "\"Limitations\": {\n",
-      "  \"Testing\": \"The method requires specialized equipment and expertise in computational analysis\",\n",
-      "  \"Environmental Factors\": \"The method may be affected by environmental factors such as wastewater treatment processes and sample handling\"\n",
+      "  \"Testing\": \"The method requires high-quality wastewater samples and may not work well with low-quality samples\",\n",
+      "  \"Environmental Factors\": \"The method may be affected by environmental factors such as temperature and pH\"\n",
       "},\n",
       "\"Potential Applications\": {\n",
       "  \"Point-of-Care Testing\": \"The method has potential applications in point-of-care testing for SARS-CoV-2 variants\",\n",
-      "  \"Non-Invasive Diagnostics\": \"The method is non-invasive and can be used for diagnostics in wastewater treatment plants\"\n",
+      "  \"Non-Invasive Diagnostics\": \"The method is non-invasive and does not require clinical samples, making it a useful tool for monitoring SARS-CoV-2 variants in communities\"\n",
       "},\n",
       "\"Study Type\": {\n",
-      "  \"Diagnostic Method Development\": \"yes\",\n",
-      "  \"Wastewater Surveillance\": \"yes\",\n",
-      "  \"COVID or SARS-CoV-2 related\": \"yes\",\n",
-      "  \"Other\": \"no\"\n",
+      "  \"Diagnostic Method Development\": \"Yes\",\n",
+      "  \"Wastewater Surveillance\": \"Yes\",\n",
+      "  \"COVID or SARS-CoV-2 related\": \"Yes\",\n",
+      "  \"Other\": \"No\"\n",
       "}\n",
       "}\n",
       "\n",
-      "CPU times: user 29.1 ms, sys: 4.56 ms, total: 33.7 ms\n",
-      "Wall time: 47.8 s\n"
+      "CPU times: user 27 ms, sys: 5.06 ms, total: 32.1 ms\n",
+      "Wall time: 48.2 s\n"
      ]
     }
    ],
@@ -338,14 +337,6 @@
     "response = utils.prompt_gpt(client, MODEL, text, system_message, assistant_message)\n",
     "print(response)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34665e0a-8e49-4d14-847f-940694bb11c5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
