added abstracts to publication lists

--- a/notebooks/3_select_publications_likert.ipynb
+++ b/notebooks/3_select_publications_likert.ipynb
@@ -524,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_columns = ['identifier', 'pm_id', 'pmc_id', 'doi', 'title', 'keywords',\n",
+    "export_columns = ['identifier', 'pm_id', 'pmc_id', 'doi', 'title', 'abstract', 'keywords',\n",
     "                  'authors', 'journal', 'article_type', 'year',\n",
     "                  'project_serial_num', 'project_num',\n",
     "                  'dbgap_accession', 'research_initiative', 'sub_project',\n",
