--- a/notebooks/1_get_dbGaP_abstracts.ipynb
+++ b/notebooks/1_get_dbGaP_abstracts.ipynb
@@ -5,8 +5,8 @@
    "id": "f7b8f8d2-1d71-4823-9892-e753bfee5e73",
    "metadata": {},
    "source": [
-    "# Retrieve RADx-rad Study Abstracts from dbGaP Database\n",
-    "This notebook uses the list of dbGaP accession numbers to retrieve the study titles and abstracts for the RADx-rad project.\n",
+    "# Get dbGaP Abstracts\n",
+    "This notebook retrieves the study titles and abstracts from the [dbGaP](https://www.ncbi.nlm.nih.gov/gap/) using a list of dbGaP accession numbers for the RADx-rad initiative.\n",
     "\n",
     "**Author:** Peter W. Rose ([pwrose@ucsd.edu](mailto:pwrose@ucsd.edu))  \n",
     "**Date:** 2025-03-13"
