--- a/notebooks/test_llms.ipynb
+++ b/notebooks/test_llms.ipynb
@@ -30,11 +30,11 @@
        "{'OPEN_AI': ['gpt-4-0613',\n",
        "  'gpt-4',\n",
        "  'gpt-3.5-turbo',\n",
-       "  'codex-mini-latest',\n",
-       "  'gpt-4.1-mini',\n",
-       "  'gpt-4.1-nano-2025-04-14',\n",
+       "  'gpt-4o-audio-preview-2025-06-03',\n",
        "  'gpt-4.1-nano',\n",
        "  'gpt-image-1',\n",
+       "  'codex-mini-latest',\n",
+       "  'gpt-4o-realtime-preview-2025-06-03',\n",
        "  'davinci-002',\n",
        "  'babbage-002',\n",
        "  'gpt-3.5-turbo-instruct',\n",
@@ -98,30 +98,32 @@
        "  'gpt-4.1-2025-04-14',\n",
        "  'gpt-4.1',\n",
        "  'gpt-4.1-mini-2025-04-14',\n",
+       "  'gpt-4.1-mini',\n",
+       "  'gpt-4.1-nano-2025-04-14',\n",
        "  'gpt-3.5-turbo-16k',\n",
        "  'tts-1',\n",
        "  'whisper-1',\n",
        "  'text-embedding-ada-002'],\n",
-       " 'SDSC_LLM': ['llava-onevision',\n",
-       "  'phi3',\n",
+       " 'SDSC_LLM': ['llama3',\n",
        "  'gemma3',\n",
-       "  'embed-mistral',\n",
-       "  'llama3',\n",
+       "  'phi3',\n",
        "  'llama3-sdsc',\n",
+       "  'llava-onevision',\n",
+       "  'embed-mistral',\n",
        "  'DeepSeek-R1-Distill-Qwen-32B'],\n",
-       " 'NRP_LLM': ['llava-onevision',\n",
-       "  'DeepSeek-R1-Distill-Qwen-32B',\n",
-       "  'watt',\n",
-       "  'olmo',\n",
-       "  'gorilla',\n",
+       " 'NRP_LLM': ['olmo',\n",
        "  'gemma3',\n",
-       "  'deepseek-r1-qwen-qualcomm',\n",
-       "  'llama3-sdsc',\n",
-       "  'phi3',\n",
-       "  'llama3',\n",
        "  'embed-mistral',\n",
+       "  'llava-onevision',\n",
+       "  'watt',\n",
+       "  'groq-tools',\n",
+       "  'DeepSeek-R1-Distill-Qwen-32B',\n",
+       "  'gorilla',\n",
        "  'kimi',\n",
-       "  'groq-tools']}"
+       "  'deepseek-r1-qwen-qualcomm',\n",
+       "  'llama3',\n",
+       "  'phi3',\n",
+       "  'llama3-sdsc']}"
       ]
      },
      "execution_count": 2,
@@ -146,11 +148,11 @@
        "{'OPEN_AI': ['gpt-4-0613',\n",
        "  'gpt-4',\n",
        "  'gpt-3.5-turbo',\n",
-       "  'codex-mini-latest',\n",
-       "  'gpt-4.1-mini',\n",
-       "  'gpt-4.1-nano-2025-04-14',\n",
+       "  'gpt-4o-audio-preview-2025-06-03',\n",
        "  'gpt-4.1-nano',\n",
        "  'gpt-image-1',\n",
+       "  'codex-mini-latest',\n",
+       "  'gpt-4o-realtime-preview-2025-06-03',\n",
        "  'davinci-002',\n",
        "  'babbage-002',\n",
        "  'gpt-3.5-turbo-instruct',\n",
@@ -214,23 +216,25 @@
        "  'gpt-4.1-2025-04-14',\n",
        "  'gpt-4.1',\n",
        "  'gpt-4.1-mini-2025-04-14',\n",
+       "  'gpt-4.1-mini',\n",
+       "  'gpt-4.1-nano-2025-04-14',\n",
        "  'gpt-3.5-turbo-16k',\n",
        "  'tts-1',\n",
        "  'whisper-1',\n",
        "  'text-embedding-ada-002'],\n",
        " 'SDSC_LLM': [],\n",
-       " 'NRP_LLM': ['llava-onevision',\n",
-       "  'DeepSeek-R1-Distill-Qwen-32B',\n",
-       "  'watt',\n",
-       "  'olmo',\n",
+       " 'NRP_LLM': ['olmo',\n",
+       "  'deepseek-r1-qwen-qualcomm',\n",
+       "  'llama3',\n",
        "  'gorilla',\n",
        "  'gemma3',\n",
-       "  'deepseek-r1-qwen-qualcomm',\n",
-       "  'llama3-sdsc',\n",
        "  'phi3',\n",
-       "  'llama3',\n",
+       "  'llama3-sdsc',\n",
+       "  'llava-onevision',\n",
+       "  'watt',\n",
        "  'embed-mistral',\n",
        "  'kimi',\n",
+       "  'DeepSeek-R1-Distill-Qwen-32B',\n",
        "  'groq-tools']}"
       ]
      },
@@ -298,11 +302,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"model_name\": \"gpt-4\",\n",
-      "  \"model_version\": \"2023-04\",\n",
-      "  \"training_data_cutoff\": \"October 2023\"\n",
+      "  \"training_data\": \"up to October 2023\",\n",
+      "  \"response\": {\n",
+      "    \"apology\": \"I'm sorry, but I can't provide my model name or version.\",\n",
+      "    \"assistance_offer\": \"However, I'm here to help with any questions you have.\"\n",
+      "  }\n",
       "}\n",
-      "{'completion_tokens': 424, 'prompt_tokens': 38, 'total_tokens': 462, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 384, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}\n"
+      "{'completion_tokens': 612, 'prompt_tokens': 38, 'total_tokens': 650, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 576, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}\n"
      ]
     }
    ],
